--- a/Fix Stragglers/Localization/BrazilianPortuguese/FS_BrazilianPortuguese.loca.xml
+++ b/Fix Stragglers/Localization/BrazilianPortuguese/FS_BrazilianPortuguese.loca.xml
@@ -10,7 +10,7 @@
     <content contentuid="h5d60d107098540098301438a85c1fc50g654" version="1">Se deve ou não aplicar dano de queda aos membros do grupo após o teletransporte, caso o saltador tenha sofrido dano de queda.</content>
     <content contentuid="h9f020d218ff847b0b1ce71c1b9233b9c8gge" version="1">Se deve ou não aumentar a distância de salto para outros personagens, para que eles possam tentar acompanhar.</content>
     <content contentuid="h21b8b24dce564043bd4e227f2acebdd23g04" version="1">Se deve ou não aumentar a distância de salto dos companheiros assim que seu personagem pular.</content>
-    <content contentuid="he1faf010cea447b19f9dd1ef6ca720176775" version="1">Se deve ou não lidar apenas com os membros do grupo que estão agrupados ou vinculados ao saltador.</content>
+    <content contentuid="he1faf010cea447b19f9dd1ef6ca720176775" version="1">Se deve ou não ajudar os membros do grupo que estão agrupados ou vinculados ao saltador.</content>
     <content contentuid="hca9298b5534042ac85011f24f6d5b5f485a1" version="1">Se habilitado, apenas os membros do grupo com FOR igual ou superior à do saltador serão teletransportados ou recebem buff.</content>
     <content contentuid="h3f0d2ff3cc57431cb0780bb8b27e1e2f7bag" version="1">Ativar/desativar o mod.</content>
     <content contentuid="heee1a7e5bd444eb18d50a0402c95a76bd288" version="1">Ignorar se houver dano de queda</content>
@@ -42,4 +42,6 @@
     <content contentuid="h84d2ab75eabc404eb0ea8b09b6654e5ad7da" version="1">Se deve ou não teletransportar os membros do grupo vinculados se eles estiverem muito distantes do personagem controlado.</content>
     <content contentuid="h09d65cb72c104e17aaf50c7335c0462d356c" version="1">Limite de distância (metros) (sem ter pulado)</content>
     <content contentuid="h695ec44009634bc79d2ce353ddf435655c87" version="1">Limite de distância em metros para teletransportar os membros do grupo.&lt;br&gt;Os membros agrupados serão teletransportados se estiverem a X metros de distância de um personagem controlado, independente de pulos.&lt;br&gt;3m = ~10ft</content>
+    <content contentuid="h9156ae140a5c4ad187da86aaf77922f9d45c" version="1">Aplicar efeito visual em personagens teletransportados</content>
+    <content contentuid="h3ab9dd4dbd184839b87a2147b20f87f5dd3b" version="1">Se deve ou não aplicar um efeito visual em personagens teletransportados.</content>
 </contentList>
