--- a/Fix Stragglers/Localization/BrazilianPortuguese/FS_BrazilianPortuguese.loca.xml
+++ b/Fix Stragglers/Localization/BrazilianPortuguese/FS_BrazilianPortuguese.loca.xml
@@ -10,8 +10,8 @@
     <content contentuid="h5d60d107098540098301438a85c1fc50g654" version="1">Se deve ou não aplicar dano de queda aos membros do grupo após o teletransporte, caso o saltador tenha sofrido dano de queda.</content>
     <content contentuid="h9f020d218ff847b0b1ce71c1b9233b9c8gge" version="1">Se deve ou não aumentar a distância de salto para outros personagens, para que eles possam tentar acompanhar.</content>
     <content contentuid="h21b8b24dce564043bd4e227f2acebdd23g04" version="1">Se deve ou não aumentar a distância de salto dos companheiros assim que seu personagem pular.</content>
-    <content contentuid="he1faf010cea447b19f9dd1ef6ca720176775" version="1">Se deve ou não ajudar os membros do grupo que estão agrupados ou vinculados ao saltador.</content>
-    <content contentuid="hca9298b5534042ac85011f24f6d5b5f485a1" version="1">Se habilitado, apenas os membros do grupo com FOR igual ou superior à do saltador serão teletransportados ou recebem buff.</content>
+    <content contentuid="he1faf010cea447b19f9dd1ef6ca720176775" version="1">Se deve ou não ajudar os membros do grupo que estão agrupados ou vinculados ao saltador/personagem controlado.</content>
+    <content contentuid="hca9298b5534042ac85011f24f6d5b5f485a1" version="1">Se habilitado, apenas os membros do grupo com Força igual ou superior à do saltador/personagem controlado serão ajudados.</content>
     <content contentuid="h3f0d2ff3cc57431cb0780bb8b27e1e2f7bag" version="1">Ativar/desativar o mod.</content>
     <content contentuid="heee1a7e5bd444eb18d50a0402c95a76bd288" version="1">Ignorar se houver dano de queda</content>
     <content contentuid="hb5c8d3bf0dfe4b819797c16a7c645f495ae7" version="1">Ativar método de teletransporte</content>
