--- a/Fix Stragglers/Localization/English/FS_English.loca.xml
+++ b/Fix Stragglers/Localization/English/FS_English.loca.xml
@@ -10,8 +10,8 @@
     <content contentuid="h5d60d107098540098301438a85c1fc50g654" version="1">Whether to apply fall damage to party members after teleporting if jumper took fall damage.</content>
     <content contentuid="h9f020d218ff847b0b1ce71c1b9233b9c8gge" version="1">Whether to buff the jump distance for other characters so that they may try to keep up.</content>
     <content contentuid="h21b8b24dce564043bd4e227f2acebdd23g04" version="1">Whether to buff jump distance for companions right when your character jumps.</content>
-    <content contentuid="he1faf010cea447b19f9dd1ef6ca720176775" version="1">Whether to only help party members that are grouped or linked to the jumper.</content>
-    <content contentuid="hca9298b5534042ac85011f24f6d5b5f485a1" version="1">If enabled, only party members with STR equal or higher than the jumper will be teleported or buffed.</content>
+    <content contentuid="he1faf010cea447b19f9dd1ef6ca720176775" version="1">Whether to only help party members that are grouped or linked to the jumper/controlled character.</content>
+    <content contentuid="hca9298b5534042ac85011f24f6d5b5f485a1" version="1">If enabled, only party members with STR equal or higher than the jumper/controlled character will be helped</content>
     <content contentuid="h3f0d2ff3cc57431cb0780bb8b27e1e2f7bag" version="1">Toggle the mod on/off.</content>
     <content contentuid="heee1a7e5bd444eb18d50a0402c95a76bd288" version="1">Ignore if fall damage</content>
     <content contentuid="hb5c8d3bf0dfe4b819797c16a7c645f495ae7" version="1">Enable teleporting method</content>
