--- a/Fix Stragglers/Localization/BrazilianPortuguese/FS_BrazilianPortuguese.loca.xml
+++ b/Fix Stragglers/Localization/BrazilianPortuguese/FS_BrazilianPortuguese.loca.xml
@@ -43,5 +43,5 @@
     <content contentuid="h09d65cb72c104e17aaf50c7335c0462d356c" version="1">Limite de distância (metros) (sem ter pulado)</content>
     <content contentuid="h695ec44009634bc79d2ce353ddf435655c87" version="1">Limite de distância em metros para teletransportar os membros do grupo.&lt;br&gt;Os membros agrupados serão teletransportados se estiverem a X metros de distância de um personagem controlado, independente de pulos.&lt;br&gt;3m = ~10ft</content>
     <content contentuid="h9156ae140a5c4ad187da86aaf77922f9d45c" version="1">Aplicar efeito visual em personagens teletransportados</content>
-    <content contentuid="h3ab9dd4dbd184839b87a2147b20f87f5dd3b" version="1">Se deve ou não aplicar um efeito visual em personagens teletransportados.</content>
+    <content contentuid="h3ab9dd4dbd184839b87a2147b20f87f5dd3b" version="1">Qual efeito visual aplicar ao teletransportar personagens. Selecione NONE para desativar.</content>
 </contentList>
