--- a/Fix Stragglers/Localization/English/FS_English.loca.xml
+++ b/Fix Stragglers/Localization/English/FS_English.loca.xml
@@ -44,5 +44,5 @@
     <content contentuid="h09d65cb72c104e17aaf50c7335c0462d356c" version="1">Distance threshold (meters) (without having jumped)</content>
     <content contentuid="h695ec44009634bc79d2ce353ddf435655c87" version="1">Distance threshold in meters for teleporting party members.&lt;br&gt;Members will be teleported if they are X meters away from the controlled character, regardless of jumps.&lt;br&gt;3m = ~10ft</content>
     <content contentuid="h9156ae140a5c4ad187da86aaf77922f9d45c" version="1">Apply VFX to teleported characters</content>
-    <content contentuid="h3ab9dd4dbd184839b87a2147b20f87f5dd3b" version="1">Whether to apply a visual effect to teleported characters.</content>
+    <content contentuid="h3ab9dd4dbd184839b87a2147b20f87f5dd3b" version="1">What visual effect to apply when teleporting characters. Pick NONE to disable.</content>
 </contentList>
