--- a/Fix Stragglers/Localization/English/FS_English.loca.xml
+++ b/Fix Stragglers/Localization/English/FS_English.loca.xml
@@ -47,4 +47,8 @@
     <content contentuid="h3ab9dd4dbd184839b87a2147b20f87f5dd3b" version="1">What visual effect to apply when teleporting characters. Pick NONE to disable.</content>
     <content contentuid="hb85ee769341e4af2983216899cc74e1d436f" version="1">Whether to ignore summons when teleporting/helping party members.</content>
     <content contentuid="h4b8dbe31e25743fcbf6bee6e8cec438d57f6" version="1">Ignore summons</content>
+    <content contentuid="hf3a29641e4e14792b1329ecdca098f49ga4c" version="1">Teleport party to you NOW</content>
+    <content contentuid="h6f2ca1b3df5748cc975fed9f10db594702bb" version="1">Teleport party to you NOW (Force)</content>
+    <content contentuid="h4d1b593c4aa64583b70c99dd82383edaa23e" version="1">Teleport party members to the location of your character regardless of your settings (combat, etc).</content>
+    <content contentuid="hf8e993f425d44a5d97ebdd1efaebb37c6e57" version="1">Teleport party members to the location of your character according to your settings.</content>
 </contentList>
