--- a/Fix Stragglers/Localization/BrazilianPortuguese/FS_BrazilianPortuguese.loca.xml
+++ b/Fix Stragglers/Localization/BrazilianPortuguese/FS_BrazilianPortuguese.loca.xml
@@ -50,4 +50,6 @@
     <content contentuid="h6f2ca1b3df5748cc975fed9f10db594702bb" version="1">Teletransportar grupo até você AGORA (Forçar)</content>
     <content contentuid="h4d1b593c4aa64583b70c99dd82383edaa23e" version="1">Teletransportar os membros do grupo para a localização do seu personagem, independentemente das suas configurações (combate, etc).</content>
     <content contentuid="hf8e993f425d44a5d97ebdd1efaebb37c6e57" version="1">Teletransportar os membros do grupo para a localização do seu personagem de acordo com suas configurações.</content>
+    <content contentuid="had6129d543474a07953e38eb5716e54456a3" version="1">Estas configurações permitem que você teletransporte os membros do grupo se estiverem muito distantes do personagem controlado, independentemente de pulos.</content>
+    <content contentuid="hd6ffcbfc7a92433889c8d7ae61d0e90475g2" version="1">Método de teletransporte baseado em distância</content>
 </contentList>
