--- a/Fix Stragglers/Localization/English/FS_English.loca.xml
+++ b/Fix Stragglers/Localization/English/FS_English.loca.xml
@@ -53,4 +53,8 @@
     <content contentuid="hf8e993f425d44a5d97ebdd1efaebb37c6e57" version="1">Teleport party members to the location of your character according to your settings.</content>
     <content contentuid="had6129d543474a07953e38eb5716e54456a3" version="1">These settings allow you to teleport party members if they are too far away from the controlled character, regardless of jumps.</content>
     <content contentuid="hd6ffcbfc7a92433889c8d7ae61d0e90475g2" version="1">Distance-based teleporting method</content>
+    <content contentuid="hf7a3b7a29e1941a4b599fe36e3c5ffb06c48" version="1">Ignore restricted characters</content>
+    <content contentuid="hc4b5138b3d4d47c78f37d52a0a88c367673e" version="1">Ignore party members that are in a 'restricted' state: in Danger Zone or affected by movement/fast travel restrictions (arrested, camp night, etc).</content>
+    <content contentuid="h541faa82e54a4e1c80ed24ccbaef61c72399" version="1">Ignore on dialogue</content>
+    <content contentuid="hcaded10a91be4e5fa440dba60753ad0f179a" version="1">Ignore party members that are in dialogue.</content>
 </contentList>
