--- a/Fix Stragglers/Localization/English/FS_English.loca.xml
+++ b/Fix Stragglers/Localization/English/FS_English.loca.xml
@@ -57,4 +57,6 @@
     <content contentuid="hc4b5138b3d4d47c78f37d52a0a88c367673e" version="1">Ignore party members that are in a 'restricted' state: in Danger Zone or affected by movement/fast travel restrictions (arrested, camp night, etc).</content>
     <content contentuid="h541faa82e54a4e1c80ed24ccbaef61c72399" version="1">Ignore on dialogue</content>
     <content contentuid="hcaded10a91be4e5fa440dba60753ad0f179a" version="1">Ignore party members that are in dialogue.</content>
+    <content contentuid="h4786fd5ea1d84f1694597e3ac77201dcg050" version="1">Always force teleport the party to you, even if some restrictions would normally block it.</content>
+    <content contentuid="hb9d4feb6abbc4649bd3055f75ad509f0f05g" version="1">Always force teleport</content>
 </contentList>
