--- a/Fix Stragglers/Localization/BrazilianPortuguese/FS_BrazilianPortuguese.loca.xml
+++ b/Fix Stragglers/Localization/BrazilianPortuguese/FS_BrazilianPortuguese.loca.xml
@@ -58,4 +58,6 @@
     <content contentuid="hcaded10a91be4e5fa440dba60753ad0f179a" version="1">Ignorar membros do grupo em diálogo.</content>
     <content contentuid="hb9d4feb6abbc4649bd3055f75ad509f0f05g" version="1">Sempre forçar teleporte</content>
     <content contentuid="h4786fd5ea1d84f1694597e3ac77201dcg050" version="1">Sempre forçar teletransportar o grupo até você, mesmo se algumas restrições normalmente bloqueariam isso.</content>
+    <content contentuid="h62c6c1302eef4bffabf7482009bba14240c9" version="1">Evitar altura/terreno perigoso</content>
+    <content contentuid="hdcea8784451e4f64938235d480ee4de2267e" version="1">Se deve ou não evitar altura/terreno perigoso ao teletransportar membros do grupo.</content>
 </contentList>
